--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -25,7 +25,7 @@
                 </div>
                 <div class="col-8 text-right">
                     <span>Total User</span>
-                    <h2 class="font-bold">{{total_doctor}}</h2>
+                    <h2 class="font-bold">{{total_user}}</h2>
                 </div>
             </div>
         </div>
@@ -38,7 +38,20 @@
                 </div>
                 <div class="col-8 text-right">
                     <span>Total Stock</span>
-                    <h2 class="font-bold">{{total_employee}}</h2>
+                    <h2 class="font-bold">{{ total_stock}}</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-4">
+        <div class="widget style1 lazur-bg">
+            <div class="row">
+                <div class="col-4">
+                    <i class="fa fa-indent fa-5x"></i>
+                </div>
+                <div class="col-8 text-right">
+                    <span>Available Stock</span>
+                    <h2 class="font-bold">{{stock}}</h2>
                 </div>
             </div>
         </div>
@@ -51,7 +64,7 @@
                 </div>
                 <div class="col-8 text-right">
                     <span>Total Sells</span>
-                    <h2 class="font-bold">{{ total_admitted_patient }}</h2>
+                    <h2 class="font-bold">{{ total_sell }}</h2>
                 </div>
             </div>
         </div>
@@ -60,16 +73,16 @@
 <div class="row">
     <div class="col-lg-4">
         <div class="card">
-            <h5 class="card-header bg-danger">দৈনিক আয় / ব্যয়</h5>
+            <h5 class="card-header bg-danger">Daily Record</h5>
             <div class="card-body">
                 <h2 class="text-center text-success">{{ day }}</h2>
                 <hr style="background-color: red;">
                 <div class="row">
                     <div class="col-lg-6">
 
-                        <h5 class="card-title">আয়ের পরিমান {{ daily_income }} /- </h5>
-                        <h5 class="card-title">ব্যয় এর পরিমান {{daily_expense}}/-</h5>
-                        <h5 class="card-title">সর্বমোট আয় {{ total_income_daily }}/-</h5>
+                        <h5 class="card-title">daily_stock : {{ daily_stock }} /- </h5>
+                        <h5 class="card-title">daily_sell : {{daily_sell}}/-</h5>
+                        <h5 class="card-title">total income : {{ total_income_daily }}/-</h5>
                     </div>
                     <div class="col-lg-6">
                         <img src="{% static 'img/unnamed.jpg' %}" alt="" class="img-fluid">
@@ -80,16 +93,16 @@
     </div>
     <div class="col-lg-4">
         <div class="card">
-            <h5 class="card-header bg-danger">মাসিক আয় / ব্যয়</h5>
+            <h5 class="card-header bg-danger">Monthly Record</h5>
             <div class="card-body">
                 <h2 class="text-center text-success">{{ month }}</h2>
                 <hr style="background-color: red;">
                 <div class="row">
                     <div class="col-lg-6">
 
-                        <h5 class="card-title">আয়ের পরিমান {{  total_monthly_income }} /- </h5>
-                        <h5 class="card-title">ব্যয় এর পরিমান {{ total_monthly_expense }}/-</h5>
-                        <h5 class="card-title">সর্বমোট আয় {{ monthly_profit }} /-</h5>
+                        <h5 class="card-title">daily_stock  : {{  monthly_stock }} /- </h5>
+                        <h5 class="card-title">monthly_sell : {{ monthly_sell }}/-</h5>
+                        <h5 class="card-title">Total Income : {{ monthly_profit }} /-</h5>
                     </div>
                     <div class="col-lg-6">
                         <img src="{% static 'img/unnamed.jpg' %}" alt="" class="img-fluid">
@@ -100,16 +113,16 @@
     </div>
     <div class="col-lg-4">
         <div class="card">
-            <h5 class="card-header bg-danger">বাৎসরিক আয় / ব্যয়</h5>
+            <h5 class="card-header bg-danger">Yearly Record</h5>
             <div class="card-body">
                 <h2 class="text-center text-success">{{ year }}</h2>
                 <hr style="background-color: red;">
                 <div class="row">
                     <div class="col-lg-6">
 
-                        <h5 class="card-title">আয়ের পরিমান {{ total_yearly_income }} /- </h5>
-                        <h5 class="card-title">ব্যয় এর পরিমান {{ total_yearly_expense }}/-</h5>
-                        <h5 class="card-title">সর্বমোট আয় {{ yearly_profit }}/-</h5>
+                        <h5 class="card-title">Yearly_stock : {{ yearly_stock }} /- </h5>
+                        <h5 class="card-title">Yearly_stock : {{ yearly_sell }}/-</h5>
+                        <h5 class="card-title">Total Income : {{ yearly_profit }}/-</h5>
                     </div>
                     <div class="col-lg-6">
                         <img src="{% static 'img/unnamed.jpg' %}" alt="" class="img-fluid">
@@ -119,86 +132,86 @@
         </div>
     </div>
 </div>
-<div class="row ">
-    <div class="col-md-12">
-            <div class="card mt-3">
-                <div class="card-header bg-primary">
-                    <div class="row align-items-center">
-                        <h4 class="text-blod" style="padding-left:20px;">দৈনিক রোগীর তালিকা</h4>
-                    </div>
-                </div>
-
-                <div class="container-fluid">
-                    <div class="col-md-12 mt-2 mb-4">
-                        <div class="row align-items-center">
-                            <div class="col-12">
-                                <div class="col-lg-offset-6">
-                                    <a class="btn btn-info btn-sm float-right" href="">
-                                        <i class="fa fa-plus-circle"></i>&nbsp;নতুন যোগ করুন</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="table-responsive">
-                        <table class="table table-bordered align-items-center table-flush" id="adminHome">
-                            <thead class="thead-light">
-                            <tr>
-                                <th data-sort="name">ক্রমিক নং</th>
-                                <th data-sort="name">রোগীর নাম</th>
-                                <th data-sort="name">মোবাইল নাম্বার</th>
-                                <th>কর্ম</th>
-                            </tr>
-                            </thead>
-                            <tbody class="list">
-
-                            {% for p in patient %}
-
-                                <tr>
-                                    <th scope="row"><span class="name mb-0 text-sm">{{ forloop.counter }}</span></th>
-                                    <td>
-                                        <span class="status">{{ p.name }}</span><br>
-                                        <small>{{ p.address }}</small>
-                                    </td>
-                                    <td>
-                                        <span class="status">{{ p.phone }}</span><br>
-                                        <small>{{ p.created_at }}</small>
-                                    </td>
-
-                                    <td style="width: 10%">
-                                        <div class="btn-group">
-                                            <a href="" data-toggle="modal" id="{{ p.id }}"
-                                               data-target="#surve_delete{{ p.id }}">
-                                                <button class="btn btn-danger fa fa-trash"></button>
-                                            </a>
-                                        </div>
-                                    </td>
-                                </tr>
-                                <div class="modal fade" id="surve_delete{{ p.id }}" tabindex="-1" role="dialog"
-                                     aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                    <div class="modal-dialog" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalLabel">আপনি কি রোগীটিকে মুছে ফেলতে চাচ্ছেন?</h5>
-                                                <button class="close" type="button" data-dismiss="modal" aria-label="Close">
-                                                    <span aria-hidden="true">×</span>
-                                                </button>
-                                            </div>
-                                            <div class="modal-body">{{ p.name }}</div>
-                                            <div class="modal-footer">
-                                                <button class="btn btn-danger" type="button" data-dismiss="modal">বাদ দিন</button>
-                                                <a class="btn btn-primary" href="{% url 'remove_daily_patient' id=p.id %}">নিশ্চিত করুন</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            {% endfor %}
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
-</div>
+{#<div class="row ">#}
+{#    <div class="col-md-12">#}
+{#            <div class="card mt-3">#}
+{#                <div class="card-header bg-primary">#}
+{#                    <div class="row align-items-center">#}
+{#                        <h4 class="text-blod" style="padding-left:20px;">দৈনিক রোগীর তালিকা</h4>#}
+{#                    </div>#}
+{#                </div>#}
+{##}
+{#                <div class="container-fluid">#}
+{#                    <div class="col-md-12 mt-2 mb-4">#}
+{#                        <div class="row align-items-center">#}
+{#                            <div class="col-12">#}
+{#                                <div class="col-lg-offset-6">#}
+{#                                    <a class="btn btn-info btn-sm float-right" href="">#}
+{#                                        <i class="fa fa-plus-circle"></i>&nbsp;নতুন যোগ করুন</a>#}
+{#                                </div>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                    <div class="table-responsive">#}
+{#                        <table class="table table-bordered align-items-center table-flush" id="adminHome">#}
+{#                            <thead class="thead-light">#}
+{#                            <tr>#}
+{#                                <th data-sort="name">ক্রমিক নং</th>#}
+{#                                <th data-sort="name">রোগীর নাম</th>#}
+{#                                <th data-sort="name">মোবাইল নাম্বার</th>#}
+{#                                <th>কর্ম</th>#}
+{#                            </tr>#}
+{#                            </thead>#}
+{#                            <tbody class="list">#}
+{##}
+{#                            {% for p in patient %}#}
+{##}
+{#                                <tr>#}
+{#                                    <th scope="row"><span class="name mb-0 text-sm">{{ forloop.counter }}</span></th>#}
+{#                                    <td>#}
+{#                                        <span class="status">{{ p.name }}</span><br>#}
+{#                                        <small>{{ p.address }}</small>#}
+{#                                    </td>#}
+{#                                    <td>#}
+{#                                        <span class="status">{{ p.phone }}</span><br>#}
+{#                                        <small>{{ p.created_at }}</small>#}
+{#                                    </td>#}
+{##}
+{#                                    <td style="width: 10%">#}
+{#                                        <div class="btn-group">#}
+{#                                            <a href="" data-toggle="modal" id="{{ p.id }}"#}
+{#                                               data-target="#surve_delete{{ p.id }}">#}
+{#                                                <button class="btn btn-danger fa fa-trash"></button>#}
+{#                                            </a>#}
+{#                                        </div>#}
+{#                                    </td>#}
+{#                                </tr>#}
+{#                                <div class="modal fade" id="surve_delete{{ p.id }}" tabindex="-1" role="dialog"#}
+{#                                     aria-labelledby="exampleModalLabel" aria-hidden="true">#}
+{#                                    <div class="modal-dialog" role="document">#}
+{#                                        <div class="modal-content">#}
+{#                                            <div class="modal-header">#}
+{#                                                <h5 class="modal-title" id="exampleModalLabel">আপনি কি রোগীটিকে মুছে ফেলতে চাচ্ছেন?</h5>#}
+{#                                                <button class="close" type="button" data-dismiss="modal" aria-label="Close">#}
+{#                                                    <span aria-hidden="true">×</span>#}
+{#                                                </button>#}
+{#                                            </div>#}
+{#                                            <div class="modal-body">{{ p.name }}</div>#}
+{#                                            <div class="modal-footer">#}
+{#                                                <button class="btn btn-danger" type="button" data-dismiss="modal">বাদ দিন</button>#}
+{#                                                <a class="btn btn-primary" href="{% url 'remove_daily_patient' id=p.id %}">নিশ্চিত করুন</a>#}
+{#                                            </div>#}
+{#                                        </div>#}
+{#                                    </div>#}
+{#                                </div>#}
+{#                            {% endfor %}#}
+{#                            </tbody>#}
+{#                        </table>#}
+{#                    </div>#}
+{#                </div>#}
+{#            </div>#}
+{#        </div>#}
+{#</div>#}
 
 {% endblock %}
 {% block script %}
