--- a/templates/notification/notification_list.html
+++ b/templates/notification/notification_list.html
@@ -1,7 +1,7 @@
 {% extends 'header.html' %}
 {% load static %}
 {% block title %}
-    Notification | Inventory Management System
+    Notification List | Inventory Management System
 {% endblock %}
 {% block stylesheet %}
 
