--- a/templates/stock/stock_list.html
+++ b/templates/stock/stock_list.html
@@ -50,7 +50,9 @@
                                     <th data-sort="name">Quantity</th>
                                     <th data-sort="name">Unit price</th>
                                     <th data-sort="name">Total Price</th>
+                                    {% if request.user.user_info.first.role == 1 %}
                                     <th>Action</th>
+                                    {% endif %}
                                 </tr>
                                 </thead>
                                 <tbody class="list">
@@ -74,19 +76,18 @@
                                     <td>
                                         <span class="status">{{ obj.total_price }}</span>
                                     </td>
-
+                                {% if request.user.user_info.first.role == 1 %}
                                     <td style="width: 10%">
                                         <div class="btn-group">
 
                                             <a href="" style="margin-right: 5px;" data-toggle="modal" data-target="#surve_update{{obj.id}}"><button class="btn btn-info fa fa-edit"></button>
                                             </a>
-                                            <a href="" data-toggle="modal" id="{{s.id}}"
-                                               data-target="#surve_delete{{obj.id}}">
-                                                <button class="btn btn-danger fa fa-trash"></button>
+                                            <a href="" data-toggle="modal" id="{{s.id}}" data-target="#surve_delete{{obj.id}}"><button class="btn btn-danger fa fa-trash"></button>
                                             </a>
 
                                         </div>
                                     </td>
+                                {% endif %}
                                 </tr>
 
                                 <div class="modal fade" id="surve_delete{{obj.id}}" tabindex="-1" role="dialog"
