--- a/templates/surveyor/surveyor_list.html
+++ b/templates/surveyor/surveyor_list.html
@@ -1,7 +1,7 @@
 {% extends 'header.html' %}
 {% load static %}
 {% block title %}
-    Add New Sells | Inventory Management System
+    User List | Inventory Management System
 {% endblock %}
 {% block stylesheet %}
 
