--- a/templates/sell/add_new_sells.html
+++ b/templates/sell/add_new_sells.html
@@ -46,13 +46,13 @@
                                 <div class="col-lg-6">
                                     <div class="form-group">
                                         <label class="form-control-label">Quantity&nbsp;<span style="color:red;">*</span></label>
-                                        <input type="number" name="quantity" class="form-control" required>
+                                        <input type="number" name="quantity" class="form-control" value="{{ stock }}" required>
                                     </div>
                                 </div>
                                 <div class="col-lg-6">
                                 <div class="form-group">
                                     <label class="form-control-label">Sell Price&nbsp;<span style="color:red;">*</span></label>
-                                    <input type="number" name="sell_price" class="form-control" required>
+                                    <input type="number" name="sell_price" class="form-control"  required>
                                 </div>
                             </div>
                             </div>
