--- a/templates/surveyor/register_surveyor.html
+++ b/templates/surveyor/register_surveyor.html
@@ -1,7 +1,7 @@
 {% extends 'header.html' %}
 {% load static %}
 {% block title %}
-    Add New Sells | Inventory Management System
+    Register User | Inventory Management System
 {% endblock %}
 {% block stylesheet %}
 
