--- a/templates/admin_home.html
+++ b/templates/admin_home.html
@@ -1,7 +1,7 @@
 {% extends 'header.html' %}
 {% load static %}
 {% block title %}
-    Admin Dashboard | Firuz Mortuz Hospital
+    Admin Dashboard | Inventory Management System
 {% endblock %}
 {% block stylesheet %}
 
