--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Survey</title>
+    <title>Login | Inventory Management System</title>
 
     <link href="{% static 'css/bootstrap.min.css' %} " rel="stylesheet">
     <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet">
@@ -34,7 +34,7 @@
               <div class="col-lg-12">
                 <div class="p-5">
                   <div class="text-center text-muted mb-4">
-                <H4 class="text-bold" style="color:#000; margin-top:10px;">Admin-Login</H4>
+                <H4 class="text-bold" style="color:#000; margin-top:10px;">Login</H4>
                 {% if messages %}
                     <div class="messages" style="margin:20px;">
                         {% for message in messages %}
