--- a/templates/surveyor/register_surveyor.html
+++ b/templates/surveyor/register_surveyor.html
@@ -25,7 +25,7 @@
           <div class="card">
             <div class="card-header bg-primary">
               <div class="row align-items-center">
-                  <h3>Add New Data Collector</h3>
+                  <h3>Add New User</h3>
               </div>
             </div>
 
@@ -124,7 +124,7 @@
                 </div>
                 <hr class="my-4" />
 
-                  <button class="btn btn-primary float-right" type="submit" style="">Create Data Collector</button>
+                  <button class="btn btn-primary float-right" type="submit" style="">Create User</button>
               </form>
             </div>
           </div>
