--- a/templates/surveyor/register_surveyor.html
+++ b/templates/surveyor/register_surveyor.html
@@ -99,8 +99,8 @@
                         </div>
                         <div class="col-lg-6">
                           <div class="form-group">
-                            <label class="form-control-label" >Profile Picture&nbsp;<span style="color:red;">*</span></label>
-                            <input type="file" name="profile_picture" class="form-control"  required>
+                            <label class="form-control-label" >Profile Picture&nbsp;</label>
+                            <input type="file" name="profile_picture" class="form-control">
                           </div>
                         </div>
                       </div>
