--- a/templates/surveyor/surveyor_list.html
+++ b/templates/surveyor/surveyor_list.html
@@ -23,7 +23,7 @@
         <div class="card">
             <div class="card-header bg-primary">
                 <div class="row align-items-center">
-                    <h4 class="text-blod" style="padding-left:20px;">All Data Collectors</h4>
+                    <h4 class="text-blod" style="padding-left:20px;">All User</h4>
                 </div>
 
                 </div>
@@ -35,13 +35,13 @@
                 <div class="col-12">
                     <div class="col-lg-offset-6">
                     <a class="btn btn-primary btn-sm float-right" href="{% url 'surveyor_list' filter='active' %}">
-                        Active Data Collector
+                        Active User
                     </a>
                     <a class="mr-2 btn btn-primary btn-sm float-right" href="{% url 'surveyor_list' filter='inactive' %}">
-                        InActive Data Collector
+                        InActive User
                     </a>
                     <a class="mr-2 btn btn-primary btn-sm float-right" href="{% url 'surveyor_list' filter='rejected' %}">
-                        Rejected Data Collector
+                        Rejected User
                     </a>
 
                 </div>
@@ -87,10 +87,12 @@
                                                 {% if request.user.is_superuser %}
                                                     <a href="{% url 'update_surveyor' id=user.id %}" style="margin-right: 5px;"><button class="btn btn-info fa fa-edit"></button></a>
                                                     <a href="" data-toggle="modal" id="{{s.id}}" data-target="#surve_delete{{s.id}}"><button class="btn btn-danger fa fa-trash"></button></a>
+
                                                 {% endif %}
 
-                                                {% if request.user.user_info.first.role == 2  %}
+                                                {% if request.user.user_info.first.role == 1  %}
                                                     <a href="{% url 'update_surveyor' id=user.id %}" style="margin-right: 5px;"><button class="btn btn-info fa fa-edit"></button></a>
+                                                    <a href="" data-toggle="modal" id="{{s.id}}" data-target="#surve_delete{{s.id}}"><button class="btn btn-danger fa fa-trash"></button></a>
                                                 {% endif %}
 
                                             </div>
